<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EB96"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textview_input_numbers"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:height="58dp"
        android:hint="@string/edittext_input_number_hint"
        android:inputType="number"
        android:padding="12dp"
        android:textColorHint="#0B0A0A"
        android:textSize="22sp"
        android:importantForAutofill="no" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="174dp">

        <RadioButton
            android:id="@+id/rbLetters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/button_letters"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rbDigits"
            app:layout_constraintEnd_toEndOf="@+id/rbDigits"
            app:layout_constraintStart_toStartOf="@+id/rbDigits"
            app:layout_constraintTop_toBottomOf="@+id/etNumber" />

        <RadioButton
            android:id="@+id/rbDigits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/button_digits"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rbLettersDigits"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbLetters" />

        <RadioButton
            android:id="@+id/rbLettersDigits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/button_digits_and_letters"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
            app:layout_constraintEnd_toEndOf="@+id/rbDigits"
            app:layout_constraintStart_toStartOf="@+id/rbDigits"
            app:layout_constraintTop_toBottomOf="@+id/rbDigits" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/textview_generated_password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:backgroundTint="#321C59"
        android:text="@string/button_generate"
         />

    <Button
        android:id="@+id/btnCopyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:backgroundTint="#321C59"
        android:text="@string/button_copy_password" />


    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:backgroundTint="#321C59"
        android:text="@string/button_exit" />

</LinearLayout>